refactor: add swagger ignore annotation
